[project]
name = "sql-bsky"
description = "Social query language"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit~=4.2.0",
    "ruff~=0.12.2",
    "pytest",
    "pyodide-pack>=0.2.0,<0.3"
]

[tool.ruff]
line-length = 119
target-version = "py312"
fix = true
src = ["src"]

[tool.ruff.lint]
# Enable all linting rules.
select = ["ALL"]
# Ignore some of the most obnoxious linting errors.
ignore = [
    # Missing docstrings.
    "D100",
    "D104",
    "D105",
    "D106",
    "D107",
    # Docstring whitespace.
    "D203",
    "D213",
    # Docstring punctuation.
    "D415",
    # Docstring quotes.
    "D301",
    # Builtins.
    "A",
    # Print statements.
    "T20",
    "ERA001", # The "commented out code issue
    "PTH123", # i do not want to clutter the dom space with more things
    "ASYNC230", # anyio is not supported in this, maybe
    # TODOs.
    "TD002",
    "TD003",
    "FIX",
    # Function complexity.
    "C901",
    # TODO: set up proper testing structure
    "S101",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
code-jam-template = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pre-commit = ">=4.2.0,<5"
